# knowledge-graph-system

./: .env.example  .gitignore  404.html  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DealDesk.md  Example.md  ISSUE_129_FIXES.md  LICENSE  LICENSE-COMMERCIAL.md  MCP_SERVER_REFACTOR_TODO.md  Makefile  OPERATOR_TEST.md  PR_LOCAL_EMBEDDINGS.md  PR_LOCAL_INFERENCE.md  README.md  analyze_ast_chunk_sizes.py  cli.py  client-install.sh  client-manager.sh  docker-compose.ollama.yml  docker-compose.yml  graph_to_mermaid.py  index.html  install.sh  knowledge-graph-architecture-spec.md  mkdocs.yml  operator.sh  package-lock.json  package.json  publish-wizard.sh  pytest.ini  quickstart.sh  reorganize_ingest.sh  requirements.txt  tasks.md  test_ai_translation.py  test_aitl_consolidation.py  (+3 more)
fuse/: README.md  pyproject.toml
fuse/kg_fuse/: api_client.py  catalog_adapter.py  cli.py  config.py  daemon.py  epoch_cache.py  filesystem.py  formatters.py  image_handler.py  job_tracker.py  main.py  models.py  query_store.py  safety.py
fuse/kg_fuse/filesystem/: __init__.py  base.py  directory.py  ingestion.py  inode.py  read.py  write.py
fuse/scripts/: generate-fuse-docs.py
fuse/tests/: test_catalog_adapter.py  test_cli.py  test_config.py  test_daemon.py  test_formatters.py  test_fuse_integration.sh  test_jobs.py  test_lifecycle.py  test_query_store.py  test_safety.py
graph-accel/ext/: Cargo.toml  graph_accel.control
graph-accel/ext/src/: degree.rs  generation.rs  guc.rs  lib.rs  load.rs  neighborhood.rs  path.rs  state.rs  status.rs  subgraph.rs  util.rs
(+2777 files in other folders)
