[project]
name = "kg-fuse"
version = "0.1.0"
description = "FUSE filesystem for Knowledge Graph"
requires-python = ">=3.11"
dependencies = [
    "pyfuse3>=3.3.0",
    "httpx>=0.27.0",
    "trio>=0.25.0",
    "tomli_w>=1.0.0",
]

[project.scripts]
kg-fuse = "kg_fuse.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
